--- a/style.css
+++ b/style.css
@@ -6,14 +6,15 @@
 
 a{
     text-decoration: none;
+
 }
 
 /* Padrão: Sem class*/
-html{ 
-    --bg-color: url(./Lawrencium.jpg);
+html{
+    --bg-color: linear-gradient(to right, #0f0c29, #302b63, #24243e);
     --text-color: rgb(0, 0, 0);
-    --primary-color: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
-    --hover-color: linear-gradient(90deg, #00c8ff90 0%, #92fe9d87 100%);
+    --primary-color: linear-gradient(90deg, #00c8ffc9 0%, #92fe9dc2 100%);
+    --hover-color:linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
     --border-color: solid rgb(255, 255, 255);
 }
 
@@ -22,8 +23,8 @@ body.dark-green{
     --bg-color: url(./DeepSpace.jpg);
     --text-color: rgb(0, 0, 0);
     --border-color: white;
-    --primary-color: linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
-    --hover-color: linear-gradient(90deg, #00c8ff90 0%, #92fe9d87 100%);
+    --primary-color: linear-gradient(90deg, #00c8ffbc 0%, #92fe9db7 100%);
+    --hover-color:linear-gradient(90deg, #00C9FF 0%, #92FE9D 100%);
     --border-color: solid white;
 }
 
@@ -40,11 +41,15 @@ body{
 
 .container{
     border: 1.5px var(--border-color);
-    border-radius: 8px;
-    padding: 10px;
+    border-radius: 10px;
+    padding: 35px;
     text-align: center;
     width: 375px;
     margin: 70px auto 70px;
+
+    animation-duration: 1s;
+    animation-name: links;
+    animation-timing-function: ease
 }
 
 img.avatar{
@@ -53,6 +58,17 @@ img.avatar{
     height: 200px;
     padding: 2.5px;
     border: 2px var(--border-color);
+    transition: 300ms;
+
+    animation-duration: 1s;
+    animation-name: links;
+    animation-timing-function: ease
+}
+
+img.avatar:hover{
+    transform: scale(105%);
+    transition: 250ms;
+    padding: 3.7px;
 }
 
 img{
@@ -62,30 +78,37 @@ img{
 
 ul{
    list-style: none;
-   margin: 30px 0;
+   margin: 30px auto 30px;
 }
 
 h1{
     margin-top: 10px;
     display: block;
     font-weight: 700;
+    transition: 300ms;
+    animation-duration: 1s;
+    animation-name: links;
 }
+
+/* h1:hover{
+    transform: scale(105%);
+} */
 
 svg{
     width: 25px;
     height: 25px;
 }
-
+#img-linkedin{
+    position: relative;
+}
 #img-github{
     position: relative;
     right: 9px;
 }
-
 #img-twitter{
     position: relative;
     right: 5px;
 }
-
 #img-gm{
     position: relative;
     right: 10px;
@@ -102,9 +125,25 @@ ul li a{
     font-size: 17px;
     font-weight: 600;
     margin-bottom: 16px;
-    border-radius: 8px;
+    border-radius: 10px;
 
     transition: background 500ms;
+    transition: 300ms;
+    animation-duration: 1s;
+    animation-name: links;
+    animation-timing-function: ease
+}
+
+ul li a:hover{
+    background: var(--hover-color);
+    transform: scale(110%);
+
+    transition: 300ms;
+    padding: 3.7px;
+
+    animation-duration: 1s;
+    animation-name: links;
+    animation-timing-function: ease
 }
 
 ul img{
@@ -113,17 +152,47 @@ ul img{
     justify-content: center;
 }
 
-ul li a:hover{
-    background: var(--hover-color);
+@keyframes links {
+    0% {
+        opacity: 0;
+      }
+      50% {
+        transform: translateY(-10vw);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+.linkedin{
+    animation-delay: 0ms;
 }
+
+.github{
+    animation-delay: 100ms;
+}
+
+.twitter{
+    animation-delay: 200ms;
+}
+
+.gm{
+    animation-delay: 300ms;
+}
+
 
 footer{
     font-weight: 500;
     font-size: 14px;
     opacity: 0.6;
     transition: opacity 300ms;
+    transition: 300ms;
 }
 
 footer:hover{
+    transform: scale(105%);
     opacity: 1;
+    transition: 150ms;
 }
