--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ html{
 }
 
 /* Com class: dark-green */
-body.dark-green{
+body.active{
     --bg-color: url(./DeepSpace.jpg);
     --text-color: rgb(0, 0, 0);
     --border-color: white;
@@ -37,6 +37,69 @@ body{
     background: var(--bg-color);
     color: var(--text-color);
     font-family: 'Roboto Mono', monospace;
+}
+
+#theme{
+    font-size:11px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 20px auto 10px;
+    font-family: 'Roboto Mono', monospace;
+    color: whitesmoke;
+
+    animation-duration: 1.5s;
+    animation-name: links;
+    animation-timing-function: ease
+}
+
+#toggle{    
+    position: relative;
+    margin: 5px auto 20px;
+    display: block;
+    width: 70px;
+    height: 40px;
+    border-radius: 160px;
+    background: #4c42c1;
+    transition: 0.5s;
+    cursor: pointer;
+    box-shadow: inset 0 8px 60px rgba(22, 43, 144, 0.1),
+                inset 0 8px 8px rgba(91, 38, 190, 0.1),
+                inset 0 -4px 4px rgba(37, 53, 176, 0.1);
+
+    animation-duration: 1.5s;
+    animation-name: links;
+    animation-timing-function: ease
+}
+
+#toggle.active{
+    background: #222;
+    box-shadow: 0 2px 30px rgba(0, 0, 0, 0.1),
+                inset 0 8px 8px rgba(0, 0, 0, 0.1),
+                inset 0 -4px 4px rgba(0, 0, 0, 0.05);
+}
+
+#toggle .indicator{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    background: linear-gradient(to bottom, rgb(54, 48, 159), rgb(40, 53, 154));
+    border-radius: 50%;
+    transform: scale(0.9);
+    box-shadow: 0 8px 40px rgba(0, 0, 0, 0.5),
+                inset 0 4px 4px rgba(0, 0, 0, 0.2),
+                inset 0 -4px 4px rgba(0, 0, 0, 0.2);
+    transition: 0.5s;
+}
+
+#toggle.active .indicator{
+    left: 29px;
+    background: linear-gradient(to bottom, rgb(87, 85, 90), rgb(40, 40, 40));
+    box-shadow: 0 2px 30px rgba(71, 70, 70, 0.1),
+                inset 0 8px 8px rgba(0, 0, 0, 0.1),
+                inset 0 -4px 4px rgba(0, 0, 0, 0.05);
 }
 
 .container{
